--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #333;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: sans-serif;
+}
+
+a{
+  color: #fff;
+  text-decoration: none;
+}
+
+
+.contentWrapper{
+  background-color: #272a56;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px #00000016;
+  color: #fff;
+  width: 600px;
+  padding: 2rem;
+}
+
+.results{
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 10rem;
 }
 
-.App-link {
-  color: #61dafb;
+.resultImage img{
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  margin-top: -100px;
+  margin-right: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.resultInfoHeader{
+  margin-top: 1rem;
+}
+
+.resultInfoHeader h2{
+  font-size: 2rem;
+  margin: unset;
+  margin-right: 1rem;
+}
+
+.resultInfoJoined{
+  font-size: 14px;
+}
+
+.resultInfoReposInfo{
+  display: flex;
+  justify-content: space-between;
+  background: #333333;
+  padding: 1rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.resultInfoReposInfoRepos,
+.resultInfoReposInfoFollowing,
+.resultInfoReposInfoFollowers{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  
+}
+
+.resultInfoReposInfoRepos span + span{
+  margin-top: 20px;
+}
+
+
+
+
+.resultInfoHeaderWrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 1rem;
+}
+
+.adicionalInfoLocation,
+.adicionalInfoSite,
+.adicionalInfoSocial,
+.adicionalInfoOrganization{
+  margin: 0 0 20px 0;
+}
+
+.input{
+  width: 87%;
+  border-radius: 5px;
+  height: 2rem;
+  border: unset;
+}
+
+.buttonSearch{
+  border: unset;
+  height: 35px;
+  margin-left: 10px;
+  border-radius: 5px;
+  background: #34be11;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  text-transform: capitalize;
+}
+
+.buttonSearch:hover{
+  background: #fff;
+  color: #1c6f07;
 }
